--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,5 +19,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/Logo.png
-    - assets/Detect-Image.webp
+    - assets/
+    
