--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^1.2.2
   provider: ^6.0.5
   shared_preferences: ^2.0.15
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
