--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.0.15
   flutter_secure_storage: ^8.0.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
