--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_secure_storage: ^8.0.0
   image_picker: ^0.8.4+4
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
