--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   image_picker: ^0.8.4+4
   audioplayers: ^6.1.0
+  file_picker: ^8.0.5
+  permission_handler: ^11.3.1
+  video_player: ^2.9.2
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
