--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   permission_handler: ^11.3.1
   video_player: ^2.9.2
   camera: ^0.11.0+2
+  qr_code_scanner: ^1.0.0
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
